--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,14 @@
 PORT=5050
 CORS_ORIGINS=http://localhost:5173
+LLM_PROVIDER=ollama
 GEMINI_API_KEY=
 GEMINI_MODEL=gemini-1.5-flash
 GEMINI_TEMPERATURE=0.4
 GEMINI_MAX_OUTPUT_TOKENS=800
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=gemma:7b
+OLLAMA_TEMPERATURE=0.4
+OLLAMA_NUM_PREDICT=800
 SYSTEM_PROMPT=You are Orbit AI, a concise, helpful assistant.
 FIREBASE_PROJECT_ID=
 FIREBASE_CLIENT_EMAIL=
